// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Component Snapshots should match snapshot for basic input 1`] = `
<TextInput
  editable={true}
  onChangeText={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  placeholder="Basic input"
  placeholderTextColor="#BDBDBD"
  secureTextEntry={false}
  value=""
/>
`;

exports[`Input Component Snapshots should match snapshot for input with error 1`] = `
[
  <TextInput
    editable={true}
    onChangeText={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    placeholder="Input with error"
    placeholderTextColor="#BDBDBD"
    secureTextEntry={false}
    value=""
  />,
  <div>
    This is an error message
  </div>,
]
`;

exports[`Input Component Snapshots should match snapshot for password input 1`] = `
[
  <TextInput
    editable={true}
    onChangeText={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    placeholder="Enter password"
    placeholderTextColor="#BDBDBD"
    secureTextEntry={true}
    value="password123"
  />,
  <div
    data-testid="icon-xmark-solid"
    onClick={[Function]}
  />,
  <div
    data-testid="icon-eye-slash-solid"
    onClick={[Function]}
  />,
]
`;
